--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -23,9 +23,6 @@ body{
     justify-content: center;
   
 }
-#blurZone{
-    filter: blur(3px);
-}
 
 #loginIcon{
     height : 4rem
@@ -62,19 +59,6 @@ h1{
     align-items: center;
     justify-content: center;
 
-}
-
-.btnLogin{
-    background-color: #000a31;
-    color : #fff;
-    height: 2rem;
-    font-size: 1.25rem;
-    border-radius: 0.5rem;
-    margin-top: 5px;
-}
-
-#btnLogin:hover{
-    color: #019cfe;
 }
 
 .loginInput{
@@ -262,10 +246,12 @@ main{
     align-items: center;
    justify-content: center;
    width: 100%;
+   
 }
 
 #postBtn button{
     
+    cursor: pointer;
     background-color: #000a31;
     
 }
@@ -295,4 +281,80 @@ main{
     background-color: transparent;
     border:none;
     cursor: pointer;
+}
+
+#blurZone{
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+}
+
+#postDiv{
+    background-color:#cde3f0;
+    width: 50%;
+    padding: 2rem;
+    border-radius: 5px;
+    position: absolute;
+    left: 50%;
+
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#createPost{
+    text-align: center;
+}
+
+#newPostContent{
+    width:100%;
+    height: 50%;
+}
+
+
+.btnLogin {
+    background-image: linear-gradient(#42A1EC, #0070C9);
+    border : 1px solid #0077CC;
+    border-radius: 4px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    direction: ltr;
+    display: block;
+    font-family: "SF Pro Text","SF Pro Icons","AOS Icons","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    letter-spacing: -.022em;
+    line-height: 1.47059;
+    min-width: 30px;
+    overflow: visible;
+    padding: 4px 15px;
+    text-align: center;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+}
+
+btnLogin{
+  cursor: default;
+  opacity: .3;
+}
+
+.btnLogin {
+  background-image: linear-gradient(#51A9EE, #147BCD);
+  border-color: #1482D0;
+  text-decoration: none;
+}
+
+.btnLogin {
+  background-image: linear-gradient(#3D94D9, #0067B9);
+  border-color: #006DBC;
+  outline: none;
+}
+
+.btnLogin {
+  box-shadow: rgba(131, 192, 253, 0.5) 0 0 0 3px;
+  outline: none;
 }
