--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -170,6 +170,11 @@ nav{
 }
 
 .alert{
+    display: flex;
+    flex-direction: column;
+   align-items: center;
+   justify-content: center;
+
     background-color: #fff;
     color:red;
     
@@ -319,7 +324,8 @@ main{
 
 #newPostContent{
     width:100%;
-    height: 50%;
+    height: 50vh;
+     resize: none;
 }
 
 
@@ -341,7 +347,6 @@ main{
     overflow: visible;
     padding: 4px 15px;
     text-align: center;
-    vertical-align: baseline;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
@@ -381,5 +386,17 @@ btnLogin{
     display:flex;
     gap: 10px;
 }
+#okDiv{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
- 
+input:user-invalid {
+  border: 2px solid red;
+}
+
+input:user-invalid + span::before {
+  content: "✖";
+  color: red;
+}
